--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -35,7 +35,7 @@
     text-transform: uppercase;
     color: $mongoose;
     position: absolute;
-    bottom: 15%;
+    bottom: 10%;
     left: 5%;
   }
   .timeline {
@@ -63,7 +63,7 @@
   .timeline-smaller {
     position: relative;
     width: 90%;
-    margin-top: 10rem;
+    margin-top: 5rem;
     margin-right: auto;
     margin-left: auto;
     display: -webkit-box;
