--- a/src/components/showcase/showcase.scss
+++ b/src/components/showcase/showcase.scss
@@ -312,3 +312,15 @@
     }
   }
 }
+
+@media screen and (max-width: 380px) {
+  .showcase {
+    .slider {
+      .container {
+        .top {
+          flex: 0;
+        }
+      }
+    }
+  }
+}
